Refactor server enabled-tools and OpenAI text-agent helpers